[gd_scene load_steps=13 format=2]

[ext_resource path="res://Textures/GasterBlaster/GasterBlaster.png" type="Texture" id=1]
[ext_resource path="res://Textures/GasterBlaster/GasterBlaster2.png" type="Texture" id=2]
[ext_resource path="res://Textures/GasterBlaster/GasterBlaster4.png" type="Texture" id=3]
[ext_resource path="res://Textures/GasterBlaster/GasterBlaster5.png" type="Texture" id=4]
[ext_resource path="res://Textures/GasterBlaster/GasterBlaster3.png" type="Texture" id=5]
[ext_resource path="res://Textures/GasterBlaster/GasterBlaster6.png" type="Texture" id=6]
[ext_resource path="res://Battle/Attacks/Bullets/GasterBlaster/GasterBlaster.gd" type="Script" id=7]
[ext_resource path="res://Battle/Attacks/Bullets/HitBox.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fire"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation:current_animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "FireLoop" ]
}

[sub_resource type="Animation" id=3]
resource_name = "FireLoop"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 6 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="GasterBlaster" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
anims/Default = SubResource( 1 )
anims/Fire = SubResource( 2 )
anims/FireLoop = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Sprite"]
position = Vector2( -0.500001, 4.76837e-07 )
scale = Vector2( 2.85, 2.1 )

[node name="Laser" type="Node2D" parent="."]
visible = false
position = Vector2( 28, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Color" type="ColorRect" parent="Laser"]
margin_top = -8.0
margin_right = 16.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserTop" type="Node2D" parent="."]
visible = false
position = Vector2( 28, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Color" type="ColorRect" parent="LaserTop"]
margin_top = -8.0
margin_right = 16.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserTop2" type="Node2D" parent="."]
visible = false
position = Vector2( 28, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Color" type="ColorRect" parent="LaserTop2"]
margin_top = -8.0
margin_right = 16.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserHitBox" type="Node2D" parent="."]
visible = false
position = Vector2( 28, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="HitBox" parent="LaserHitBox" instance=ExtResource( 8 )]
position = Vector2( 8, 0 )

[node name="Collision" parent="LaserHitBox/HitBox" index="0"]
shape = SubResource( 4 )

[editable path="LaserHitBox/HitBox"]
